[metadata]
name = GovnahBot
summary = OpenStack Governance Info Bot
description-file =
    README.rst
author = Sean McGinnis
author-email = sean.mcginnis@gmail.com
home-page = https://github.com/stmcginnis/guvnahbot
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[entry_points]
console_scripts =
    relinfobot = guvnahbot.bot:main
